samples/_failures_safe/1761709752_081e20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef78cd28.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ef78cd28.c:168:17: error: expected declaration or statement at end of input
  168 |                 token.value[1] = '\0';
      |                 ^~~~~
./samples/SAFE/__tmp_ef78cd28.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef78cd28.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef78cd28.c:168:17: error: expected declaration or statement at end of input
